--- a/app/views/user/index.erb
+++ b/app/views/user/index.erb
@@ -1,5 +1,9 @@
 <h1>INDEX</h1>
 
+<% if @email %>
+    <h3><%=@email%>, Welcome your login</h3>
+<% end %>
+
 <% @user.each do |u| %>
     <%= u.email %> |
     <%= u.password %> |
@@ -7,6 +11,9 @@
     <a href="/user/destroy/<%=u.id%>">Delete</a>
     <br>
 <% end %>
-<br>
-<a href="/user/new">Sign Up</a>
 
+<br>
+<% unless @email %>
+    <a href="/user/new">Sign Up</a>
+    <a href="/user/login">Login</a>
+<% end %>
